--- a/poster_journee_EDMI/main.tex
+++ b/poster_journee_EDMI/main.tex
@@ -18,7 +18,7 @@
 \usetikzlibrary{arrows.meta}
 
 \newcommand{\thm}[1]{\textcolor{bleuLaBRI}{\textbf{[#1]\xspace}}}
-\newcommand{\conj}{\textcolor{rougeLaBRI}{\textbf{Conjecture:\xspace }}}
+\newcommand{\conj}{\textcolor{rougeLaBRI}{\textbf{Conjecture:~}}}
 
 \usepackage{ellipsis}
 \usetikzlibrary{calc}
@@ -178,7 +178,7 @@ east) (base.north west) -- (base.0);
 
   \begin{beamercolorbox}[center,wd=\textwidth]{postercolumn}
     \begin{minipage}[T]{.97\textwidth}
-      \begin{block}{Objectives and questions}            
+      \begin{block}{Objectives and questions (Casework: planar graphs)}            
         \centering
         \begin{columns}
           \begin{column}{.49\textwidth}
